--- a/banner/index.css
+++ b/banner/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(245, 239, 239);
 }
 
 #cabecalho {
@@ -8,4 +8,10 @@ body {
 
 #menu {
     color: white;
+    margin: 0;
+}
+#logo {
+
+    width: 80px;
+    margin: 0;
 }
